--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {},
   "dependencies": {
     "body-parser": "~1.14.2",
+    "dns": "^0.2.2",
     "ejs": "~2.4.1",    
     "express": "~4.14.0",
     "express-session": "~1.13.0",
