--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.14.0",
     "express-session": "~1.13.0",
     "formidable": "^1.0.17",
+    "hapi": "^17.3.1",
     "log": "^1.4.0"
   },
   "devDependencies": {}
